--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,7 @@ body {
     color: rgb(231, 181, 14);
     height: 100vh;
     background-size: cover;
-    background-image: url(../img/fondo.jpg);
-
+background-color: black;
 }
 
 
